examples/gke/tei-from-gcs-deployment/cpu-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tei-deployment
  namespace: hf-gke-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tei-server
  template:
    metadata:
      labels:
        app: tei-server
        hf.co/model: BAAI--bge-base-en-v1.5
        hf.co/task: text-embeddings
    spec:
      serviceAccountName: hf-gke-service-account
      containers:
        - name: tei-cpu-container
          image: us-docker.pkg.dev/deeplearning-platform-release/gcr.io/huggingface-text-embeddings-inference-cpu.1-2:latest
          resources:
            requests:
              cpu: "8"
              memory: "32Gi"
            limits:
              cpu: "12"
              memory: "64Gi"
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /data
              name: gcs-mount
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: gcs-mount
          ephemeral:
            volumeClaimTemplate:
              spec:
                accessModes: [ "ReadWriteOnce" ]
                storageClassName: ssd
                resources:
                  requests:
                    storage: 48Gi
      nodeSelector:
         cloud.google.com/compute-class: "Performance"
         cloud.google.com/machine-family: "c2"
