examples/gke/tei-from-gcs-deployment/cpu-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tei-ingress
  namespace: hf-gke-namespace
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tei-service
                port:
                  number: 8080
